[gd_scene load_steps=4 format=3 uid="uid://cgygkfxhplfkx"]

[ext_resource type="Script" path="res://src/menus/finish_menu/finish_menu.gd" id="1_7l5me"]
[ext_resource type="FontFile" uid="uid://7g6gk26flajs" path="res://src/menus/font.ttf" id="2_53sqn"]
[ext_resource type="PackedScene" uid="uid://cflw7kg4h2s6k" path="res://src/hud/button/button.tscn" id="3_mr4pp"]

[node name="FinishMenu" type="ColorRect"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -250.0
offset_right = 225.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.0901961, 0.0823529, 0.14902, 1)
script = ExtResource("1_7l5me")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -171.5
offset_top = -217.0
offset_right = 171.5
offset_bottom = -161.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.898039, 0.313726, 0.290196, 1)
theme_override_fonts/font = ExtResource("2_53sqn")
theme_override_font_sizes/font_size = 60
text = "- FINISHED -"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -171.5
offset_top = -172.0
offset_right = 171.5
offset_bottom = -116.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.294118)
theme_override_fonts/font = ExtResource("2_53sqn")
theme_override_font_sizes/font_size = 20
text = "Not bad for a beginner"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -173.0
offset_top = -97.0
offset_right = 173.0
offset_bottom = 122.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="Time" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_53sqn")
theme_override_font_sizes/font_size = 30
text = "Time"
vertical_alignment = 1

[node name="TimeScore" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_53sqn")
theme_override_font_sizes/font_size = 30
text = "-34"
horizontal_alignment = 2
vertical_alignment = 1

[node name="UnkilledEnemies" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_53sqn")
theme_override_font_sizes/font_size = 30
text = "Unkilled enemies"
vertical_alignment = 1

[node name="UnkilledEnemiesScore" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_53sqn")
theme_override_font_sizes/font_size = 30
text = "-50"
horizontal_alignment = 2
vertical_alignment = 1

[node name="DamageReceived" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_53sqn")
theme_override_font_sizes/font_size = 30
text = "Damages received"
vertical_alignment = 1

[node name="DamageReceivedScore" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_53sqn")
theme_override_font_sizes/font_size = 30
text = "-200"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Total" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.898039, 0.313726, 0.290196, 1)
theme_override_fonts/font = ExtResource("2_53sqn")
theme_override_font_sizes/font_size = 45
text = "TOTAL"
vertical_alignment = 1

[node name="TotalScore" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.898039, 0.313726, 0.290196, 1)
theme_override_fonts/font = ExtResource("2_53sqn")
theme_override_font_sizes/font_size = 45
text = "-284"
horizontal_alignment = 2
vertical_alignment = 1

[node name="RestartButton" parent="." instance=ExtResource("3_mr4pp")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -148.5
offset_top = 141.0
offset_right = 148.5
offset_bottom = 212.0
grow_horizontal = 2
grow_vertical = 2
text = "HERE WE GO AGAIN"

[node name="Subtext" type="Label" parent="RestartButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -171.5
offset_top = -80.5
offset_right = 171.5
offset_bottom = -24.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.294118)
theme_override_fonts/font = ExtResource("2_53sqn")
theme_override_font_sizes/font_size = 20
text = "Does that sound like enough?"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
